--- a/css/crisp.css
+++ b/css/crisp.css
@@ -140,7 +140,53 @@ th, td {
   }
 }
 body {
-  color: #444;
+  font-size: 16px;
+}
+
+input, textarea, select {
+  border: 2px solid #cccccc;
+  background: #ffffff;
+  border-radius: 4px;
+  display: block;
+  margin-bottom: 1em;
+}
+input:focus, textarea:focus, select:focus {
+  outline: none !important;
+  border-color: #999999;
+}
+
+input, textarea {
+  padding: 4px 5px;
+  width: calc(100% - 14px);
+}
+
+select {
+  width: 100%;
+  padding: 3px 1px;
+}
+
+input, select, button {
+  font-size: 16px;
+}
+
+button {
+  border: 2px solid #cccccc;
+  border-radius: 4px;
+  background: #f2f2f2;
+  padding: 4px 32px;
+}
+
+pre {
+  font-size: 15px;
+  border: 1px solid #cccccc;
+}
+
+pre, code, samp, kbd {
+  color: #555555;
+}
+
+pre, blockquote {
+  padding: 0.5em 0.75em 0.6em 0.75em;
 }
 
 /*# sourceMappingURL=crisp.css.map */
