--- a/css/crisp.css
+++ b/css/crisp.css
@@ -189,4 +189,11 @@ pre, blockquote {
   padding: 0.5em 0.75em 0.6em 0.75em;
 }
 
+section {
+  border-radius: 4px;
+  border: 2px dashed #cccccc;
+  background: #f2f2f2;
+  padding: 1em;
+}
+
 /*# sourceMappingURL=crisp.css.map */
