--- a/css/crisp.scss
+++ b/css/crisp.scss
@@ -51,3 +51,10 @@ pre, code, samp, kbd {
 pre, blockquote {
   padding: 0.5em 0.75em 0.6em 0.75em;
 }
+
+section {
+  border-radius: 4px;
+  border: 2px dashed #cccccc;
+  background: #f2f2f2;
+  padding: 1em;
+}
