--- a/css/crisp.css
+++ b/css/crisp.css
@@ -164,8 +164,8 @@ input, textarea {
   width: calc(100% - 14px);
 }
 
-textarea {
-  font-size: 14px;
+pre, textarea {
+  font-size: 15px;
 }
 
 select {
@@ -188,7 +188,6 @@ button:active {
 }
 
 pre {
-  font-size: 15px;
   border: 1px solid #cccccc;
 }
 
@@ -209,6 +208,10 @@ section {
 
 figcaption {
   color: #999999;
+}
+
+blockquote {
+  border-left: 4px solid #ccc;
 }
 
 /*# sourceMappingURL=crisp.css.map */
