--- a/css/crisp.css
+++ b/css/crisp.css
@@ -196,11 +196,12 @@ pre, code, samp, kbd {
 }
 
 pre, blockquote {
+  background: #f2f2f2;
   padding: 0.5em 0.75em 0.6em 0.75em;
 }
 
 section {
-  border-radius: 4px;
+  border-radius: 8px;
   border: 2px dashed #cccccc;
   background: #f2f2f2;
   padding: 1em;
