--- a/css/crisp.scss
+++ b/css/crisp.scss
@@ -23,7 +23,7 @@ input, textarea, select {
 }
 
 input, textarea {
-  padding: 4px 5px;
+  padding: 5px 5px;
   width: calc(100% - 14px);
 }
 
@@ -33,7 +33,7 @@ pre, textarea {
 
 select {
   width: 100%;
-  padding: 3px 1px;
+  padding: 5px 1px;
 }
 
 input, select, button {
@@ -59,16 +59,36 @@ pre, code, samp, kbd {
   color: #555555;
 }
 
+@media (prefers-color-scheme: dark) {
+  pre, code, samp, kbd {
+    color: #555555 !important;
+  }
+}
+
 pre, blockquote {
   background: #f2f2f2;
   padding: 0.5em 0.75em 0.6em 0.75em;
 }
 
+@media (prefers-color-scheme: dark) {
+  pre, blockquote {
+    color: #555555;
+    background: #d2d2d2;
+  }
+}
+
 section {
   border-radius: 8px;
-  border: 2px dashed #cccccc;
+  border: 2px dashed #aaaaaa;
   background: #f2f2f2;
-  padding: 1em;
+  padding: 0.9em 1.2em;
+}
+
+@media (prefers-color-scheme: dark) {
+  section {
+    color: #555555;
+    background: #d2d2d2;
+  }
 }
 
 figcaption {
@@ -77,4 +97,10 @@ figcaption {
 
 blockquote {
   border-left: 4px solid #ccc;
+}
+
+@media (prefers-color-scheme: dark) {
+  input, textarea, select {
+    background: #d2d2d2;
+  }
 }
