--- a/css/crisp.scss
+++ b/css/crisp.scss
@@ -51,6 +51,16 @@ button {
   }
 }
 
+@media (prefers-color-scheme: dark) {
+  button {
+    background: #e2e2e2;
+
+    &:active {
+      background: #d2d2d2;
+    }
+  }
+}
+
 pre {
   border: 1px solid #cccccc;
 }
